--- a/app/src/main/res/drawable/background_circular.xml
+++ b/app/src/main/res/drawable/background_circular.xml
@@ -3,8 +3,8 @@
     <solid
         android:color="@color/white"/>
     <corners
-        android:radius="50dp"/>
+        android:radius="5dp"/>
     <stroke
-        android:color="#DDDDDD"
+        android:color="#B3B3B3"
         android:width="1dp"/>
 </shape>
