--- a/app/src/main/res/layout/fragment_assistant_operation_mtn.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_mtn.xml
@@ -136,7 +136,7 @@
                         android:padding="2dp"
                         android:layout_marginTop="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="43dp">
+                        android:layout_height="55dp">
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
@@ -153,7 +153,6 @@
                                 android:scaleType="centerCrop"
                                 android:padding="5dp"
                                 android:src="@drawable/baseline_list_alt_24"
-                                android:background="@color/background_color"
                                 app:tint="@color/black"/>
                         </androidx.cardview.widget.CardView>
 
@@ -167,7 +166,6 @@
                             android:inputType="number"
                             android:paddingStart="30dp"
                             android:text="0"
-                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -184,7 +182,7 @@
                         android:padding="2dp"
                         android:layout_marginTop="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="43dp">
+                        android:layout_height="55dp">
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
@@ -201,7 +199,6 @@
                                 android:scaleType="centerCrop"
                                 android:padding="5dp"
                                 android:src="@drawable/baseline_phone_24"
-                                android:background="@color/background_color"
                                 app:tint="@color/black"/>
                         </androidx.cardview.widget.CardView>
 
@@ -212,9 +209,8 @@
                             android:background="@color/white"
                             android:layout_marginHorizontal="20dp"
                             android:hint="Téléphone"
-                            android:inputType="number"
+                            android:inputType="phone"
                             android:paddingStart="30dp"
-                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -231,7 +227,7 @@
                         android:padding="2dp"
                         android:layout_marginTop="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="43dp">
+                        android:layout_height="55dp">
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
@@ -248,7 +244,6 @@
                                 android:scaleType="centerCrop"
                                 android:padding="5dp"
                                 android:src="@drawable/baseline_money_24"
-                                android:background="@color/background_color"
                                 app:tint="@color/black"/>
                         </androidx.cardview.widget.CardView>
 
@@ -261,89 +256,34 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
-                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_marginTop="15dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <CheckBox
-                            android:id="@+id/checkBoxMtn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Ajouter une image"
-                            android:textColor="@color/black"
-                            android:textStyle="bold"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/checkBoxMtn"
-                            app:layout_constraintTop_toTopOf="parent" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/section_upload_input_mtn"
-                        android:layout_width="match_parent"
+                    <Button
+                        android:id="@+id/uploadPhotoMtn"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="0dp"
+                        android:text="Prendre une photo"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="15dp"
+                        android:textColor="#0084C1"
+                        android:textStyle="bold"
+                        android:backgroundTint="#FFFFFF"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/stateInfoMtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:visibility="gone"
-                        android:layout_marginTop="10dp"
-                        app:layout_constraintTop_toBottomOf="@+id/checkBoxMtn"
-                        tools:layout_editor_absoluteX="15dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal">
-
-                            <androidx.constraintlayout.widget.ConstraintLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent">
-
-                                <Button
-                                    android:id="@+id/uploadPhotoMtn"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Prendre un photo"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                                <androidx.cardview.widget.CardView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="28dp"
-                                    android:layout_marginBottom="20dp"
-                                    app:cardCornerRadius="15dp"
-                                    app:cardElevation="10dp"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/uploadPhotoMtn">
-
-                                    <ImageView
-                                        android:id="@+id/image_preview_mtn"
-                                        android:layout_width="250dp"
-                                        android:layout_height="150dp"
-                                        android:layout_gravity="center"
-                                        android:background="@drawable/background_square"
-                                        android:scaleType="centerCrop" />
-                                </androidx.cardview.widget.CardView>
-                            </androidx.constraintlayout.widget.ConstraintLayout>
-
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
+                        android:textColor="#02B715"
+                        android:text="Photo téléchargée avec succès !"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_register_input_mtn"
@@ -361,6 +301,7 @@
                         android:id="@+id/progressBar_input_mtn"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_gravity="center"/>
 
