--- a/app/src/main/res/layout/fragment_assistant_operation_orange.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_orange.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/backgroundgradientgray"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -209,6 +208,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textStyle="bold"
+                                app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 tools:text="0" />
@@ -244,10 +244,65 @@
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
+                    <CheckBox
+                        android:id="@+id/checkBoxOrange_syntaxe"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:text="Utiliser la syntaxe Orange Money"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Button
+                        android:id="@+id/uploadPhotoOrange"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Prendre une photo"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:textColor="#0084C1"
+                        android:textStyle="bold"
+                        android:backgroundTint="#FFFFFF"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/stateInfoOrange"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:visibility="gone"
+                        android:textColor="#02B715"
+                        android:text="Photo téléchargée avec succès !"/>
+
+                    <TextView
+                        android:id="@+id/orangeTextSMS"
+                        android:layout_width="wrap_content"
+                        android:layout_height="5dp"
+                        android:visibility="invisible"
+                        android:text="iohoihoi"/>
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_register_orange"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="15dp"
+                        android:background="@drawable/backgroundgradientbluebutton"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:text="enregistrer opération"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/section_upload_input_orange" />
+
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="10dp"
                         android:background="@color/background_color">
 
                         <TextView
@@ -274,99 +329,6 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/messageSmsOrange" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp">
-
-                        <CheckBox
-                            android:id="@+id/checkBoxOrange_syntaxe"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Utiliser la syntaxe Orange Money"
-                            android:textStyle="bold"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-                        <CheckBox
-                            android:id="@+id/checkBoxOrange_compte2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Ajouter une image"
-                            android:textStyle="bold"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/checkBoxOrange_syntaxe" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/section_upload_input_orange_compte2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:visibility="gone"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="0dp"
-                        app:layout_constraintTop_toBottomOf="@+id/checkBoxOrange"
-                        tools:layout_editor_absoluteX="15dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal">
-
-                            <androidx.constraintlayout.widget.ConstraintLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                app:layout_constraintEnd_toStartOf="@+id/uploadPhotoOrange_compte2"
-                                app:layout_constraintStart_toStartOf="@+id/uploadPhotoOrange_compte2">
-
-                                <Button
-                                    android:id="@+id/uploadPhotoOrange_compte2"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Prendre un photo"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                                <androidx.cardview.widget.CardView
-                                    android:id="@+id/cardView11"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginTop="28dp"
-                                    android:layout_marginBottom="20dp"
-                                    app:cardCornerRadius="15dp"
-                                    app:cardElevation="10dp"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/uploadPhotoOrange_compte2">
-
-                                    <ImageView
-                                        android:id="@+id/image_preview_orange_compte2"
-                                        android:layout_width="250dp"
-                                        android:layout_height="150dp"
-                                        android:layout_gravity="center"
-                                        android:background="@drawable/background_square"
-                                        android:scaleType="centerCrop" />
-                                </androidx.cardview.widget.CardView>
-                            </androidx.constraintlayout.widget.ConstraintLayout>
-
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_register_input_orange_compte2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="20dp"
-                        android:background="@drawable/backgroundgradientbluebutton"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/section_upload_input_orange" />
 
                     <ProgressBar
                         android:id="@+id/progressBar_input_orange_compte2"
@@ -426,4 +388,4 @@
         </LinearLayout>
 
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
