--- a/app/src/main/res/layout/fragment_assistant_operation_orange.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_orange.xml
@@ -34,7 +34,7 @@
                     app:cardElevation="0dp"
                     app:layout_constraintBottom_toBottomOf="@+id/textView2"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/btnCancelOperationOrange_compte2">
+                    app:layout_constraintTop_toTopOf="@+id/btnCancelOperationOrange">
 
                     <ImageView
                         android:layout_width="60dp"
@@ -43,7 +43,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <TextView
-                    android:id="@+id/btnCancelOperationOrange_compte2"
+                    android:id="@+id/btnCancelOperationOrange"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -63,7 +63,7 @@
                     android:layout_marginVertical="10dp"
                     android:text="@string/national_orange"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/btnCancelOperationOrange_compte2" />
+                    app:layout_constraintTop_toBottomOf="@+id/btnCancelOperationOrange" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -254,6 +254,26 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <RadioGroup
+                        android:id="@+id/radioGroupOrange"
+                        android:layout_marginVertical="10dp"
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <RadioButton
+                            android:id="@+id/radioOpt1"
+                            android:text="Dépôt"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                        <RadioButton
+                            android:id="@+id/radioOpt2"
+                            android:text="Retrait"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    </RadioGroup>
+
                     <Button
                         android:id="@+id/uploadPhotoOrange"
                         android:layout_width="wrap_content"
@@ -298,37 +318,52 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/section_upload_input_orange" />
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
+                    <ProgressBar
+                        android:id="@+id/progressBarOrange"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:layout_gravity="center"/>
+
+                    <androidx.cardview.widget.CardView
+                        app:cardCornerRadius="10dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginBottom="10dp"
-                        android:background="@color/background_color">
-
-                        <TextView
-                            android:id="@+id/messageSmsOrange"
-                            android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:paddingHorizontal="10dp"
-                            android:text="Si vous ne récevez pas de message (SMS de confirmation dépôt/retrait) de l'opération que vous venez d'effectuer, veuillez enregistrer manuellement la transaction"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            android:background="@color/background_color">
 
-                        <Button
-                            android:id="@+id/openOrangePopup"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="end"
-                            android:backgroundTint="@color/background_color"
-                            android:text="Cliquez ici"
-                            android:textColor="#0091FF"
-                            android:textStyle="bold"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/messageSmsOrange" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                            <TextView
+                                android:id="@+id/messageSmsOrange"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:paddingHorizontal="10dp"
+                                android:text="Si vous ne récevez pas de message (SMS de confirmation dépôt/retrait) de l'opération que vous venez d'effectuer, veuillez enregistrer manuellement la transaction"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <Button
+                                android:id="@+id/openOrangePopup"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="end"
+                                android:backgroundTint="#F1F1F1"
+                                android:text="Cliquez ici"
+                                android:textColor="#0091FF"
+                                android:textStyle="bold"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginBottom="10dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@+id/messageSmsOrange" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </androidx.cardview.widget.CardView>
 
                     <ProgressBar
                         android:id="@+id/progressBar_input_orange_compte2"
